# Calculotron-9000

./: .gitignore  .replit  CMakeLists.txt  CMakeSettings.json
Calculotron-9000/: CMakeLists.txt  Calculotron-9000.cpp  Calculotron-9000.h  MainHeader.hpp
Calculotron-9000/Mathematics/: Log.cpp  MathHeader.hpp  findx.cpp
Calculotron-9000/Printing/Number/: ErrorChecker.cpp  NumberPrinting.cpp
Calculotron-9000/Printing/Text/: TextPrinting.cpp
CalculotronSrc/: Calculotron-9000.cpp  MainHeader.hpp
CalculotronSrc/Mathematics/: arithsum.cpp
CalculotronSrc/Printing/Number/: NumbersHeader.hpp
CalculotronSrc/Printing/Text/: TextHeader.hpp  TextPrinting.cpp
