# CMakeList.txt : CMake project for Calculotron-9000, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Calculotron-9000 "Calculotron-9000.cpp" "Calculotron-9000.h" )

# TODO: Add tests and install targets if needed.
